Fix main nav positioning on mobile

--- a/app/javascript/src/components/Header/MainNavigation.module.css
+++ b/app/javascript/src/components/Header/MainNavigation.module.css
@@ -43,7 +43,7 @@
 .logo {
   display: flex;
   align-items: center;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
 }
 
 .title-link {
@@ -60,8 +60,8 @@
   margin-bottom: 0rem;
   font-family: 'Nunito', sans-serif;
   font-weight: 800;
-  font-size: 34px;
-  line-height: 34px;
+  font-size: 30px;
+  line-height: 30px;
   color: #eeeeee;
   text-decoration: none;
   display: flex;
@@ -72,7 +72,7 @@
 
 .icon {
   height: 100%;
-  max-width: 38px;
+  max-width: 34px;
   margin-top: 0.4rem;
 }
 
@@ -175,7 +175,7 @@
   justify-content: space-between;
   border: none;
   border-radius: 5px;
-  padding: 0.25rem 0.8rem;
+  padding: 0.25rem 0.5rem;
   font-size: 0.8rem;
   cursor: pointer;
   background-color: #1a1a1b;
@@ -255,4 +255,64 @@
   height: 10px;
   background-color: #d92563;
   border-radius: 50%;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .title {
+    justify-content: flex-start;
+  }
+
+  .hamburger-button {
+    display: block;
+    margin-left: auto;
+  }
+
+  .logo {
+    display: flex;
+    justify-content: center;
+    margin-left: 0.5rem;
+  }
+
+  .navbar-nav {
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar-nav.show {
+    display: flex;
+  }
+
+  .avatar-image {
+    margin-right: 0.15rem;
+  }
+
+  .username {
+    display: none;
+  }
+
+  .dropdown-menu {
+    position: absolute;
+    right: 0;
+    width: 200px;
+    background-color: #1a1a1b;
+    color: #eeeeee;
+  }
+
+  .sidebar.active {
+    display: block;
+  }
+
+  .icon-button {
+    margin: 0rem;
+  }
+
+  .company {
+    display: none;
+  }
 }
