--- a/app/javascript/src/components/UI/Buttons/SignupButton.module.css
+++ b/app/javascript/src/components/UI/Buttons/SignupButton.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  white-space: nowrap;
   border: none;
   border-radius: 5px;
   padding: 0.4rem 0.8rem;
@@ -17,4 +18,10 @@
 .button:hover {
   background-color: #cc4b44;
   transform: translateY(-2px);
+}
+
+@media (max-width: 768px) {
+  .button {
+    display: none;
+  }
 }
